Theming changes to fix dark mode

--- a/src/Css/match.css
+++ b/src/Css/match.css
@@ -221,6 +221,7 @@
   font-weight: bold;
   font-size: 6vh;
   text-align: center;
+  @apply dark:bg-neutral-700;
 }
 
 .athlete-name {
